Fixed some Project Settings, and updated the .gitignore to ignore Release Folders.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ ipch/
 #each computer
 *Debug/
 *debug/
+
+#ignore the Release
+#folder since it's
+#generated on each
+#computer
+*Release/
+*release/
