--- a/C++_Game_Engine_Server/C++_Game_Engine_Server.vcxproj
+++ b/C++_Game_Engine_Server/C++_Game_Engine_Server.vcxproj
@@ -73,6 +73,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="ServerNetwork.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player.hpp" />
+    <ClInclude Include="ServerNetwork.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
