Updated .gitignore, moved sendpacket stuff to a different method in ClientNetwork, updated the output of the Client to be more informational, reduced FPS to 60, updated output on Server to tell what port is open.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ ipch/
 #computer
 *Release/
 *release/
+
+#ignore the Mailing List
+#since that is secret
+#information D:
+MailingList.txt
+
+#ignore the Binaries
+#folder since it's only
+#on EBrown8534's
+#computer
+Binaries/
