Created a Packet Class for the Client. It will override the traditional sf::Packet and allow easier reading/writing from/to it.

--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj.filters
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="ClientNetwork.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneralPacket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientNetwork.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneralPacket.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
