--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
@@ -73,10 +73,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ClientNetwork.cpp" />
+    <ClCompile Include="GeneralPacket.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientNetwork.hpp" />
+    <ClInclude Include="GeneralPacket.hpp" />
+    <ClInclude Include="Player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
