Updated .gitignore again. Removed the default constructor from the client network. Added two fonts (one regular and one bold) to a new Fonts folder. Modified GeneralPacket operator overrides. Unfriended class sf::Packet in GeneralPacket. (It inherts that information anyway.) Added player movement and direction. (Direction is not setup yet.) Modified the main.cpp in the game to reflect movement, and added a text object to be a fake "Player" for now.

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,8 @@ Binaries/
 #ignore the sdf file, it
 #is rather troublesome
 #anyway
-#*.sdf
+*.sdf
+
+#ignore the suo file, it
+#is rather useless
+*.suo
