Replaced all .hpp files with .h files. Updated network to allow for player network interaction. Updated packets to send player direction. Created Menu System, as well as Main Menu. Updated player GetDisplayPosition to return either pixel-values, or tile-values.

--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj.filters
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj.filters
@@ -27,15 +27,27 @@
     <ClCompile Include="GeneralPacket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ClientNetwork.hpp">
+    <ClInclude Include="Menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.hpp">
+    <ClInclude Include="GeneralPacket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GeneralPacket.hpp">
+    <ClInclude Include="ClientNetwork.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
