--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
@@ -75,12 +75,16 @@
     <ClCompile Include="ClientNetwork.cpp" />
     <ClCompile Include="GeneralPacket.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ClientNetwork.hpp" />
-    <ClInclude Include="GeneralPacket.hpp" />
-    <ClInclude Include="Player.hpp" />
+    <ClInclude Include="ClientNetwork.h" />
+    <ClInclude Include="GeneralPacket.h" />
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
