--- a/C++_Game_Engine_Server/C++_Game_Engine_Server.vcxproj.filters
+++ b/C++_Game_Engine_Server/C++_Game_Engine_Server.vcxproj.filters
@@ -26,10 +26,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ServerNetwork.hpp">
+    <ClInclude Include="ServerNetwork.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.hpp">
+    <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
