Added a Connected variable to networking. Added a "GameMenu" which is the game itself. Started work on an Input Handler. Moved a large portion of code out of Main. Updated the MainMenu with a Login button to a form, and a Register button to a form. Updated players to not spam movement.

--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
@@ -73,7 +73,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ClientNetwork.cpp" />
+    <ClCompile Include="GameMenu.cpp" />
     <ClCompile Include="GeneralPacket.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -81,7 +83,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientNetwork.h" />
+    <ClInclude Include="GameMenu.h" />
     <ClInclude Include="GeneralPacket.h" />
+    <ClInclude Include="InputHandler.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
