Synchronized packet codes across client and server. Created a global player on the client, so that it can be passed between menu's. Added read functions to the GeneralPacket on the Client. Created login and register buttons working. Added player names, passwords, and emails on server, and player names on client. Fixed Map-Editor to show a message telling the person to focus in it before it can be used. Created Server FileStream, which provides an interface to read and write from/to files. Added Server GeneralPacket with player-write functions. Currently only allows for player "Elliott." Input not yet added.

--- a/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
+++ b/C++_Game_Engine_Client/C++_Game_Engine_Client.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
@@ -87,6 +88,7 @@
     <ClInclude Include="GeneralPacket.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
