--- a/C++_Game_Engine_Editors/C++_Game_Engine_Editors.vcxproj.filters
+++ b/C++_Game_Engine_Editors/C++_Game_Engine_Editors.vcxproj.filters
@@ -21,9 +21,27 @@
     <ClCompile Include="RadialMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\C++_Game_Engine_Client\Map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\C++_Game_Engine_Client\InputHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\C++_Game_Engine_Server\FileStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RadialMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\C++_Game_Engine_Client\Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\C++_Game_Engine_Client\InputHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\C++_Game_Engine_Server\FileStream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
